# wayback_manager

./: .gitignore  README.md  cdx.py  main.py  misc.py  requirements.txt  scrapers.py  setup.cfg  utils.py
scrapers/: base.py  bbc.py  breitbart.py  nytimes.py  wsj.py
src/: cdx.py  cli.py  main.py  utils.py
src/scrapers/: cnn.py  cnn_asoup.html  foxnews.py  nytimes.py  wsj.py
waybackscan/: cdx.py  cli.py  config.ini  main.py  misc.py  utils.py
waybackscan/scrapers/: abcnews.py  abcnews_scale_publisher_scrapers.ipynb  base.py  bbc.py  huffpost.py  nbcnews.py  nypost.py  requirements.txt  scrape.py  theguardian.py  usatoday.py  utils.py  vox.py  washingtonpost.py
