[metadata]
name = waybackscan
version = 0.1.3
description = "A tool to quickly get cdx information from the Internet Archive"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Coën D. Needell"
author_email = "coeneedell@gmail.com"
license = MIT
url = "git@github.com:SoyBison/wayback_manager.git"
platforms = any

[options]
python_requires = >=3.8
package_dir=
	=.
packages=find:
include_package_data = True
zip_safe = False
install_requires =
	pandas
	requests
	tqdm
	dateparser

[options.entry_points]
console_scripts = 
	waybackscan = waybackscan.cli:cli
